Fixed a layout issue with the sandbox navigation pane

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -131,6 +131,7 @@ article {
 aside {
 	display: flex;
 	flex-direction: column;
+	align-items: stretch;
 	position: absolute;
 	box-sizing: border-box;
 	z-index: 10;
@@ -139,7 +140,7 @@ aside {
 	background-color: white;
 
 	nav {
-		position: relative;
+		position: static;
 
 		a {
 
@@ -155,6 +156,8 @@ aside {
 		}
 	}
 	section {
+		overflow-y: auto;
+		flex: 1;
 		padding: 0 2rem;
 
 		h3 {
@@ -175,9 +178,6 @@ aside {
 
 	}
 	footer {
-		justify-content: flex-end;
-		position: absolute;
-		bottom: 0;
 		padding: 0 2rem 1rem 2rem;
 		background-color: #AAD4F5;
 
